examples/nginx-with-hpa/nd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-car
spec:
#  replicas: 1
  selector:
    matchLabels:
      app: car
  template:
    metadata:
      name: car-pod
      labels:
        app: car
      annotations:
        prometheus.io/port: '80'
        prometheus.io/scrape: 'true'
    spec:
      containers:
        - name: car-cont
          image: nginx:alpine
#          resources:
#            limits:
#              cpu: "0.10"
#              memory: "256Mi"
#            requests:
#              cpu: "0.10"
#              memory: "128Mi"
          ports:
            - containerPort: 80
          command: ["sh", "-c", "echo 'Hello nginx Cars' > /usr/share/nginx/html/index.html && exec nginx -g 'daemon off;'"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      name: bar-pod
      labels:
        app: bar
      annotations:
        prometheus.io/port: '80'
        prometheus.io/scrape: 'true'
    spec:
      containers:
        - name: bar-cont
          image: nginx:alpine
#          resources:
#            limits:
#              cpu: "0.10" # 0.5
#              memory: "256Mi"
#            requests:
#              cpu: "0.10" #0.25
#              memory: "128Mi"
          ports:
            - containerPort: 80
          command: ["sh", "-c", "echo 'Hello nginx Bars' > /usr/share/nginx/html/index.html && exec nginx -g 'daemon off;'"]
