examples/nginx-with-hpa/ns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: car-service
spec:
  type: ClusterIP
  selector:
    app: car
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
 #     nodePort: 32000
---
apiVersion: v1
kind: Service
metadata:
  name: bar-service
spec:
  type: ClusterIP
  selector:
    app: bar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
   #   nodePort: 32001
